feat(auth): Add auth to tasks routes
